[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/Health.gd" type="Script" id=1]
[ext_resource path="res://animations/health/Show.tres" type="Animation" id=2]
[ext_resource path="res://animations/health/Pop.tres" type="Animation" id=3]
[ext_resource path="res://fonts/baseFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://animations/health/Hide.tres" type="Animation" id=5]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Health2:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Health2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Health2:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="Health" type="Node2D"]
z_index = 5
script = ExtResource( 1 )

[node name="Health2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 46.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "10"
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Hide = ExtResource( 5 )
anims/Pop = ExtResource( 3 )
anims/RESET = SubResource( 1 )
anims/Show = ExtResource( 2 )

[connection signal="heal" from="." to="." method="_on_Health_heal"]
[connection signal="hit" from="." to="." method="_on_Health_hit"]
